--- a/example_www/index.html
+++ b/example_www/index.html
@@ -23,6 +23,7 @@
           <button type="button" class="btn btn-primary btn-block" onclick="appintance.ssoLogin()">微博登录</button>
           <button type="button" class="btn btn-primary btn-block" onclick="appintance.logout()">微博登出</button>
           <button type="button" class="btn btn-primary btn-block" onclick="appintance.shareToWeibo()">微博分享</button>
+          <button type="button" class="btn btn-primary btn-block" onclick="appintance.weiboCommon()">weiboCommon</button>
         </div>
       </div>
     </body>
